--- a/src/brownie-config.yaml
+++ b/src/brownie-config.yaml
@@ -14,7 +14,7 @@ networks:
   ganache:
     verify: False
   kovan:
-    verify: True
+    verify: False
     weth_token: '0xd0a1e359811322d97991e03f863a0c30c2cf029c'
     fau_token: '0xFab46E002BbF0b4509813474841E0716E6730136'
     dai_usd_price_feed: '0x777A68032a88E5A84678A77Af2CD65A7b3c0775a'
